test: Stream.FlatPeek.flatMapTest